Enhance project documentation with detailed architecture, feature descriptions, and component communication flow